--- a/Project Cinema/Base.lproj/Main.storyboard
+++ b/Project Cinema/Base.lproj/Main.storyboard
@@ -292,7 +292,6 @@
                                                         <state key="normal" image="FavoritesFullBarIcon"/>
                                                         <connections>
                                                             <action selector="favoriteButton:" destination="j8L-WV-aGZ" eventType="touchUpInside" id="w9k-78-MLj"/>
-                                                            <action selector="favortieButtonAction:" destination="dxP-Hi-Gez" eventType="touchUpInside" id="fSa-7B-1Qd"/>
                                                         </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eXR-66-reF">
@@ -426,6 +425,7 @@
                                     <outlet property="favoriteButtonOutlet" destination="yYv-BZ-dIy" id="vX4-BQ-jsC"/>
                                     <outlet property="movieBackdropImageView" destination="GGG-PQ-Rhv" id="dNF-IP-UsV"/>
                                     <outlet property="moviePosterImageView" destination="4PB-CM-YxK" id="k4S-aA-2Bv"/>
+                                    <outlet property="movieRuntimeAndGenres" destination="eln-P8-ekk" id="ncc-m2-cgb"/>
                                     <outlet property="movieTitleLabel" destination="eXR-66-reF" id="Byw-my-JcX"/>
                                 </connections>
                             </tableViewCell>
